--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,23 @@
 {
-    "name": "medcare-server",
-    "version": "1.0.0",
-    "description": "server for medcare app",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node --watch index.js"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.21.2",
-        "passport": "^0.7.0",
-        "passport-google-oauth": "^2.0.0",
-        "passport-local": "^1.0.0"
-    }
+  "name": "medcare-server",
+  "version": "1.0.0",
+  "description": "server for medcare app",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --watch index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.14.1",
+    "pg-promise": "^11.13.0"
+  }
 }
